==============
lxml changelog
==============

Under development
======================

Features added
--------------

Bugs fixed
----------

* ``lxml.html.open_in_browser()`` didn't work in Python 3 due to the
  use of os.tempnam.  It now takes an optional 'encoding' parameter.

Other changes
--------------


2.3alpha2 (2010-07-24)
======================

Features added
--------------

Bugs fixed
----------

* Crash in XSLT when generating text-only result documents with a
  stylesheet created in a different thread.

Other changes
--------------

* ``repr()`` of Element objects shows the hex ID with leading 0x
  (following ElementTree 1.3).


2.3alpha1 (2010-06-19)
======================

Features added
--------------

* Keyword argument ``namespaces`` in ``lxml.cssselect.CSSSelector()``
  to pass a prefix-to-namespace mapping for the selector.

* New function ``lxml.etree.register_namespace(prefix, uri)`` that
  globally registers a namespace prefix for a namespace that newly
  created Elements in that namespace will use automatically.  Follows
  ElementTree 1.3.

* Support 'unicode' string name as encoding parameter in
  ``tostring()``, following ElementTree 1.3.

* Support 'c14n' serialisation method in ``ElementTree.write()`` and
  ``tostring()``, following ElementTree 1.3.

* The ElementPath expression syntax (``el.find*()``) was extended to
  match the upcoming ElementTree 1.3 that will ship in the standard
  library of Python 3.2/2.7.  This includes extended support for
  predicates as well as namespace prefixes (as known from XPath).

* During regular XPath evaluation, various ESXLT functions are
  available within their namespace when using libxslt 1.1.26 or later.

* Support passing a readily configured logger instance into
  ``PyErrorLog``, instead of a logger name.

* On serialisation, the new ``doctype`` parameter can be used to
  override the DOCTYPE (internal subset) of the document.
